added new change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Dev Profile</title>
+    <title>Diether lang</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -53,9 +53,9 @@
     <section class="education" id="education">
         <h2 class="section-title animate-up">Education</h2>
         <div class="edu-card animate-right">
-            <h3>Bachelor of Science in Software Engineering</h3>
-            <span>University of Tech | 2017 - 2021</span>
-            <p>Focused on software design patterns, web technologies, and backend development.</p>
+            <h3>Bachelor of Science Information Technology</h3>
+            <span>Cagayan State University| 2022-2025</span>
+            <p>Focused on web technologies, and backend development.</p>`
         </div>
     </section>
 
